gedcomfy/tests/snapshots/tests__golden_files@invalid_level_error.ged.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ASCII\r\nx y z\r\n"
expression: "format!(\"{:?}\",\n    Report::new(err).with_source_code(NamedSource::new(filename.to_string_lossy(),\n    data)))"
input_file: gedcom/tests/syntax_inputs/invalid_level_error.ged
---
gedcom::parse_error::invalid_level

  × GEDCOM file contains a syntax error
  ├─▶ Invalid non-numeric level 'x'
  ╰─▶ invalid digit found in string
   ╭─[invalid_level_error.ged:5:1]
 4 │ 1 CHAR ASCII
 5 │ x y z
   · ┬
   · ╰── this is not a (positive) number
   ╰────
